# pyfluidsynth

./: .gitignore  .isort.cfg  CHANGELOG  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README  README.md  TODO  TODO.md  all-documents.html  apidocs-help.html  classIndex.html  fluidsynth.Modulator.html  fluidsynth.Sequencer.html  fluidsynth.Synth.html  fluidsynth.fluid_midi_router_t.html  fluidsynth.fluid_synth_channel_info_t.html  fluidsynth.html  fluidsynth.py  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyfluidsynth.py  pylintrc  pyproject.toml  searchindex.json  setup.py  undoccedSummary.html
.github/workflows/: ci.yml
doc/: fluidsynth.html  fluidsynth.md
soundFontDefinitions/: definitions.py  fluidModSrc.py  fluidModTransforms.py
test/: 1080-c01.mid  example.sf2  modulatorTest.py  render_smf.py  render_smf_c.py  render_smf_mem.py  sequencerTest.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
tests/: test_2.py  test_pyfluidsynth.py  test_sequencer.py
