[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "pyfluidsynth"
version = "1.3.3"
description = "Python bindings for FluidSynth, a MIDI synthesizer that uses SoundFont instruments"
readme = "README.md"

authors = [{name = "Nathan Whitehead", email = "nwhitehe@gmail.com"}]
dependencies = [
  "numpy",
]
[project.urls]
Homepage = "https://github.com/nwhitehead/pyfluidsynth"

[tool.setuptools]
py-modules = ["fluidsynth"]
include-package-data = false
